Include new endpoints and fix issue with put
